Changes for 1.1beta10:

 - added support of history of actions and events for screens (Martins)
 - fixed server hanging in calculation of aggregate functions (Alexei)
 - allow item delays up-to 24h (Alexei)
 - unsupported items can be activated by one click (Eugene)
 - each graph from history and graphs remember selected period (Eugene)
 - fixed status changing of triggers when all displayed (Eugene)
 - added support of proc.mem[] for AIX (Eugene)
 - added support of proc.num[] for AIX (Eugene)
 - added Notification Report (Martins)
 - added 'command line' parameter for Tru64 proc.mem[] (Eugene)
 - improved proc.num[] for Tru64 (Eugene)
 - added 'command line' parameter for Solaris proc.mem[] (Eugene)
 - added 'command line' parameter for Solaris proc.num[] (Eugene)
 
Changes for 1.1beta9:

 - added support of long name parameters for all ZABBIX applications (Eugene)
 - added column alerts.userid (Alexei)
 - slightly optimised code in evaluate_simple (Alexei)
 - added 'command line' parameter for Linux proc.mem[] (Eugene)
 - added parameter '-t key' for ZABBIX agent (Eugene)
 - added parameters '-h' '-v' for all ZABBIX applications (Eugene)
 - added support of aggregate items (Alexei)
 - do not display disabled triggers and items in overview screens (Eugene)
 - vertical hostnames in overview screens (Eugene)
 - disabling/enabling template items (Eugene)
 - fixed agregate functions to work with uint data type (Alexei)
 - parameter StartSuckers renamed to StartPollers (Alexei)
 - dropped support of experimental parameter NoTimeWait (Alexei)
 - removed unused escalator (Alexei)
 - removed escalation tables (Alexei)
 - fix compilation if no function atoll() (Alexei)
 - fixed compilation issue in run_command() (Alexei)
 - added vertical text for OVERVIEW (Eugene)
 - fixed items status changing of parent hosts (Eugene)
 - one separated poller process for unreachable hosts (Alexei)
 - better function is_double() (Alexei)
 - fixed host conditions in actions (Alexei)